--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon app.ts"
+    "dev": "cross-env nodemon bin/www.ts"
   },
   "prettier": {
     "semi": false,
@@ -12,13 +12,20 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa-logger": "^3.1.2",
+    "cross-env": "^7.0.3",
     "koa": "^2.13.4",
+    "koa-logger": "^3.2.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "@types/koa-router": "^7.4.4",
-    "koa-router": "^10.1.1"
+    "@types/node": "^17.0.31",
+    "ejs": "^3.1.7",
+    "koa-onerror": "^4.2.0",
+    "koa-router": "^10.1.1",
+    "koa-views": "^8.0.0"
   }
 }
